[gd_scene load_steps=11 format=3 uid="uid://k8rs6ix3ky54"]

[ext_resource type="Script" uid="uid://cp7up8a08gy2e" path="res://src/scripts/Menuscripts/Menu.gd" id="1_b0okb"]
[ext_resource type="Texture2D" uid="uid://emxpwiiae345" path="res://src/assets/main menu/MenuBackground.png" id="2_gnfu8"]
[ext_resource type="StyleBox" uid="uid://qgqwx3j0vmu" path="res://src/assets/main menu/button_style.tres" id="3_dmamv"]
[ext_resource type="Theme" uid="uid://uutwoo57qh5p" path="res://src/assets/themes/TitleTheme.tres" id="3_rx48v"]
[ext_resource type="FontFile" uid="uid://fnqi7h5g1cgb" path="res://src/assets/main menu/TitleFont.ttf" id="4_dmamv"]
[ext_resource type="StyleBox" uid="uid://46ohunynwgdm" path="res://src/assets/main menu/button_normal.tres" id="4_n4k5x"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_t7jdw"]
texture = ExtResource("2_gnfu8")
expand_margin_top = 252.0
expand_margin_bottom = 284.0
modulate_color = Color(0.601223, 0.601223, 0.601223, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t7jdw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_echhp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b0okb"]
bg_color = Color(0.0728426, 0.0728426, 0.0728426, 1)

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b0okb")

[node name="Background Image" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -2.0
offset_bottom = 285.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_t7jdw")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -214.0
offset_top = -51.0
offset_right = 215.0
offset_bottom = 304.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="HostButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
theme_override_styles/focus = ExtResource("3_dmamv")
theme_override_styles/normal = ExtResource("4_n4k5x")
text = "Host"
icon_alignment = 1

[node name="CopyOID" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
theme_override_styles/focus = ExtResource("3_dmamv")
theme_override_styles/normal = ExtResource("4_n4k5x")
text = "Copy OID"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="OIDInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Host OID"

[node name="JoinButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
theme_override_styles/focus = SubResource("StyleBoxEmpty_t7jdw")
theme_override_styles/normal = ExtResource("4_n4k5x")
text = "Join"
icon_alignment = 1

[node name="OID" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_dmamv")
theme_override_font_sizes/font_size = 35
text = "Loading..."
horizontal_alignment = 1

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
theme_override_styles/focus = SubResource("StyleBoxEmpty_echhp")
theme_override_styles/normal = ExtResource("4_n4k5x")
text = "Quit"
icon_alignment = 1

[node name="TextEdit" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 1.0
offset_right = 9.0
offset_bottom = 8.0
theme = ExtResource("3_rx48v")
text = "Very Cool Title"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -305.5
offset_right = 305.5
offset_bottom = 219.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("4_dmamv")
theme_override_font_sizes/font_size = 80
text = "CORE PROTOCOL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Guide_button" type="Button" parent="."]
layout_mode = 0
offset_left = 1520.0
offset_top = 160.0
offset_right = 1628.0
offset_bottom = 198.0
theme_override_fonts/font = ExtResource("4_dmamv")
theme_override_font_sizes/font_size = 34
toggle_mode = true
text = "GUIDE"

[node name="Guide" type="Label" parent="."]
visible = false
z_index = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -348.0
offset_top = -235.0
offset_right = 344.0
offset_bottom = -108.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_dmamv")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxFlat_b0okb")
text = "The Earth is Attacked by Aliens!
Protect the Core and feed it energy cells to beat the Game!
As the host you spawn as a Fighter specializing in AoE.
Joining him spawns you as a Ranger, specializing in
movement and ranged attacks."

[node name="Label2" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -129.0
offset_top = 150.0
offset_right = 129.0
offset_bottom = 258.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 10
theme_override_constants/shadow_offset_y = 10
theme_override_fonts/font = ExtResource("4_dmamv")
theme_override_font_sizes/font_size = 110
text = "ZERO"

[connection signal="pressed" from="VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CopyOID" to="." method="_on_copy_oid_pressed"]
[connection signal="pressed" from="VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="toggled" from="Guide_button" to="." method="_on_guide_button_toggled"]
